added drawing + networking to javascript sources

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,9 @@
             text-align:center;
         }
         </style>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src='network.js'></script>
+        <script src='drawing.js'></script>
         <script src='game.js'></script>
     </head>
     <body>
