aesthetic changes and host game reset

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,11 @@
         <style>
         body{
             text-align:center;
+            background-color:#ddd;
+        }
+        canvas{
+            border:2px solid #ccc;
+            background-color:#fff;
         }
         </style>
         <script src="/socket.io/socket.io.js"></script>
